<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mobile DL Search</string>
    <string name="welcome">Welcome</string>
    <string name="username">Wilson</string>
    <string name="init">Initialise</string>
    <string name="app_description">User Guide: </string>
    <string name="app_description_step_one">\u2022 Step 1: Filter</string>
    <string name="app_description_step_two">\u2022 Step 2: Overview</string>
    <string name="app_description_step_three">\u2022 Step 3: View Detail</string>
    <string name="app_description_step_four">\u2022 Step 4: Test</string>
    <string name="step_one">Step 1</string>
    <string name="step_two">Step 2</string>
    <string name="step_three">Step 3</string>
    <string name="step_four">Step 4</string>
    <string name="search">Search</string>
    <string name="view_detail">Detail</string>
    <string name="download_data">Download</string>
    <string name="download_model">Download</string>
    <string name="performance_accuracy">Accuracy</string>
    <string name="performance_precision">Precision</string>
    <string name="performance_recall">Recall</string>
    <string name="performance_f1score">F1 Score</string>
    <string name="ok">OK</string>
    <string name="test">Test</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="stop">Stop</string>
    <string name="report">Report</string>
    <string name="accuracy_attempt">Accuracy Change in Each Attempt</string>
    <string name="accuracy_activity">Mean Accuracy in Each Activity</string>

    <string name="accelerometer_title">Accelerometer</string>
    <string name="accelerometer_x_value">X Value: %1$.2f</string>
    <string name="accelerometer_y_value">Y Value: %1$.2f</string>
    <string name="accelerometer_z_value">Z Value: %1$.2f</string>

    <string name="activity">Activity</string>
    <string name="probability">Probability</string>
    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>
    <string name="biking">Biking</string>

    <string name="sensor_test">Sensor Test</string>
    <string name="action_settings">Settings</string>
    <string name="enter_title">Enter Title</string>
    <string name="text1">The museum is housed in the Louvre Palace, originally built as a fortress in the late 12th century…</string>
    <string name="text2">Gwanghwamun is the main and largest gate of Gyeongbokgung Palace, in Jongno-gu, Seoul, South Korea.</string>
    <string name="text3">Tower Bridge is a combined bascule and suspension bridge in London built in 1886–1894.</string>
    <string name="text4">The Temple of Heaven is an imperial complex of religious buildings situated in the southeastern part…</string>
    <string name="text5">The Aegean Islands are within the sea and some bound it on its southern periphery…</string>

    <string name="pause">PAUSE</string>
    <string name="download">Download</string>
    <string name="permission_not_enabled">Please enable the Write External Storage Permission</string>
    <string name="delete_files">Delete Downloads test files from the file system and try again.</string>
    <string name="delete_title">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="view">VIEW</string>
    <string name="wifiOnly">WiFi Only</string>
    <string name="retry">RETRY</string>
    <string name="complete_over">%1$d/%2$d</string>
    <string name="start_fetching">Click start to start fetching game files.</string>
    <string name="fetch_started">Fetching Game Files…</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="fetch_failed">An error occurred whiles fetching the game files.</string>
    <string name="reset">RESET</string>
    <string name="single_download_demo">Single Download Demo</string>
    <string name="download_list_demo">Download List Demo</string>
    <string name="game_file_download_demo">Game File Download Demo</string>
    <string name="percent_progress">%1$d%%</string>
    <string name="downloading">downloading…</string>
    <string name="queued">QUEUED</string>
    <string name="added">ADDED</string>
    <string name="status_unknown">Status Unknown</string>
    <string name="delete_all_files">Delete Downloaded Files</string>
    <string name="file_server">FETCH FILE SERVER DEMO</string>
    <string name="downloaded_files_deleted">Downloads Files Deleted</string>
    <string name="game_download_error">An error occurred, could not get game files.</string>
    <string name="failed_multi_enqueue">Failed Multi Enqueue Demo</string>
    <string name="multi_fragment">MULTI FRAGMENT DEMO</string>
    <string name="enqueue_error">Could not enqueue this request. Check logcat.</string>
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>

</resources>