<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="horizontal"
        android:paddingLeft="70dp"
        android:paddingRight="24dp">

        <TextView
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/outline_double_arrow_black_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/fragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="10dp"
        android:paddingLeft="60dp"
        android:paddingRight="30dp"
        android:text="@string/app_description"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:text="@string/app_description_step_one"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:text="@string/app_description_step_two"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:text="@string/app_description_step_three"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="50dp"
        android:paddingRight="30dp"
        android:text="@string/app_description_step_four"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"/>
    </LinearLayout>

</FrameLayout>
