<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clipChildren="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingLeft="7dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/outline_arrow_back_black_24"
            app:tint="@color/white"/>

        <TextView
            android:id="@+id/location_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_two"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/outline_double_arrow_black_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/fragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:id="@+id/applications"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_pink" />

            <TextView
                android:id="@+id/tv_application_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_pink" />

            <TextView
                android:id="@+id/tv_application_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">
<!--            android:background="@drawable/domain_background">-->
            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btn_view_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:padding = "0dp"
                android:paddingTop="1dp"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:nb_textSize="18sp"
                app:nb_textStyle="bold"
                app:nb_text="@string/view_detail"
                app:nb_borderColor="#FFFFFF"
                app:nb_borderWidth="0dp"
                app:nb_backgroundColor="@color/pink"
                app:nb_focusColor="@color/holo_red_light"
                app:nb_textColor="@color/white"
                app:nb_radius="10dp"
                app:nb_fontIcon="&#xf0a4;"/>
<!--            <TextSwitcher-->
<!--                android:id="@+id/ts_domain"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center" />-->

        </FrameLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_marginStart="@dimen/recycler_view_left_offset"
        android:layout_marginTop="18dp"
        android:clipChildren="false"
        android:overScrollMode="never"
        app:layoutManager="com.ramotion.cardslider.CardSliderLayoutManager" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <com.dinuscxj.progressbar.CircleProgressBar
                    android:id="@+id/progress_accuracy"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    app:drawBackgroundOutsideProgress="true"
                    app:progress_background_color="@android:color/transparent"
                    app:progress_end_color="@color/red"
                    app:progress_start_color="@color/red"
                    app:progress_stroke_width="1dp"
                    app:progress_style="line"
                    app:progress_text_color="@color/white"
                    app:progress_text_size="15sp"/>
                <TextView
                    android:id="@+id/text_accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/performance_accuracy"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <com.dinuscxj.progressbar.CircleProgressBar
                    android:id="@+id/progress_precision"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    app:drawBackgroundOutsideProgress="true"
                    app:progress_background_color="@android:color/transparent"
                    app:progress_end_color="@color/red"
                    app:progress_start_color="@color/red"
                    app:progress_stroke_width="1dp"
                    app:progress_style="line"
                    app:progress_text_color="@color/white"
                    app:progress_text_size="15sp"/>
                <TextView
                    android:id="@+id/text_precision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/performance_precision"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <com.dinuscxj.progressbar.CircleProgressBar
                    android:id="@+id/progress_recall"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    app:drawBackgroundOutsideProgress="true"
                    app:progress_background_color="@android:color/transparent"
                    app:progress_end_color="@color/red"
                    app:progress_start_color="@color/red"
                    app:progress_stroke_width="1dp"
                    app:progress_style="line"
                    app:progress_text_color="@color/white"
                    app:progress_text_size="15sp"/>
                <TextView
                    android:id="@+id/text_recall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/performance_recall"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">
                <com.dinuscxj.progressbar.CircleProgressBar
                    android:id="@+id/progress_f1score"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_margin"
                    app:drawBackgroundOutsideProgress="true"
                    app:progress_background_color="@android:color/transparent"
                    app:progress_end_color="@color/red"
                    app:progress_start_color="@color/red"
                    app:progress_stroke_width="1dp"
                    app:progress_style="line"
                    app:progress_text_color="@color/white"
                    app:progress_text_size="15sp"/>
                <TextView
                    android:id="@+id/text_f1score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/performance_f1score"/>
            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-6dp"
            android:background="@drawable/circle_yellow" />

        <TextSwitcher
            android:id="@+id/ts_data"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_offset"
            android:textColor="@color/white" />

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/btn_data_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding = "0dp"
            android:paddingTop="1dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            app:nb_textSize="18sp"
            app:nb_textStyle="bold"
            app:nb_text="@string/download_data"
            app:nb_borderColor="#FFFFFF"
            app:nb_borderWidth="0dp"
            app:nb_backgroundColor="@color/yellow"
            app:nb_focusColor="@color/holo_orange_dark"
            app:nb_textColor="@color/white"
            app:nb_radius="10dp"
            app:nb_fontIcon="&#xf019;"/>
        </RelativeLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-6dp"
            android:background="@drawable/circle_green" />

        <TextSwitcher
            android:id="@+id/ts_model"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/left_offset"
            android:layout_marginEnd="10dp" />

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/btn_model_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:padding = "0dp"
            android:paddingTop="1dp"
            android:paddingBottom="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            app:nb_textSize="18sp"
            app:nb_textStyle="bold"
            app:nb_text="@string/download_model"
            app:nb_borderColor="#FFFFFF"
            app:nb_borderWidth="0dp"
            app:nb_backgroundColor="@color/green"
            app:nb_focusColor="@color/holo_green_dark"
            app:nb_textColor="@color/white"
            app:nb_radius="10dp"
            app:nb_fontIcon="&#xf019;"/>
        </RelativeLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-6dp"
            android:background="@drawable/circle_blue" />

        <TextSwitcher
            android:id="@+id/ts_layer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/left_offset" />

        </RelativeLayout>

    </FrameLayout>



</LinearLayout>